--- a/platformio.ini
+++ b/platformio.ini
@@ -21,9 +21,15 @@ build_flags =
     -IDrivers/STM32F1xx_HAL_Driver/Inc/Legacy
 
 ;选择编译文件的所在路径，这里包含了源文件路径，启动文件，驱动库和rtos路径。如果+<*>便是路径下的所以文件，-<.git/>便是忽略.git路径下的文件
-src_filter = +<Core/Src> +<startup_stm32f103xe.s> +<Drivers/> +<Middlewares/>
+src_filter = +<Core/Src> +<startup_stm32f103xb.s> +<Drivers/>
 ;选择链接文件
-board_build.ldscript = ./STM32F103RCTx_FLASH.ld
+board_build.ldscript = ./STM32F103C8Tx_FLASH.ld
+
+
+; 如果使用stlink的话
+upload_protocol = stlink
+debug_tool = stlink
+
 
 
 [platformio]
